# e-commerce-grupo-29-t14

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml
_project/: settings.py  urls.py
addresses/: models.py  permissions.py  serializers.py  urls.py  views.py
addresses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_address_number_alter_address_zip_code.py  0004_alter_address_number_alter_address_zip_code.py
cart/: models.py  permissions.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_cartproducts_cart_id.py  0005_rename_cart_id_cartproducts_cart.py  0006_cartproducts_price.py  0007_cartproducts_price_currency_alter_cartproducts_price.py  0008_alter_cartproducts_quantity.py
orders/: models.py  permissions.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_order_seller_productsorders_price_and_more.py
products/: models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0003_alter_product_stock.py  0003_product_available_alter_product_stock.py  0004_product_image.py  0005_merge_0003_alter_product_stock_0004_product_image.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_admin.py
users/migrations/: 0001_initial.py
